# cs2-demo-opener

./: .gitignore  LICENSE  README.md  index.html  package.json  vite.config.js
.agents/: AGENTS.md
.github/workflows/: release.yml  update-dependencies.yml
public/: cs2_demo.proto
scripts/: download_icons.mjs
src/: main.js  main.jsx  map_data.json  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asset_manager.rs  errors.rs  launcher.rs  lib.rs  main.rs  models.rs  parser.rs  parser_2d.rs  steam.rs
src/canvas/: EffectActor.js  GrenadeActor.js  PlayerActor.js  ReplayEngine.js  constants.js
src/components/: DemoPanel.jsx  Dropzone.jsx  Icons.jsx  ReplayCanvas.jsx  ReplayViewer.jsx  SettingsOverlay.jsx  VoiceCardGrid.jsx
src/components/replay/: FloorSelector.jsx  HUDScore.jsx  KillFeed.jsx  LoadingState.jsx  PlaybackControls.jsx  PlayerCard.jsx  ReplayHeader.jsx  RoundTimeline.jsx  TeamPanel.jsx  replay.css  timeline.css
