[package]
name = "cs2-demo-opener"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cs2_demo_opener_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.14.4"
protox = "0.7.2"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
source2-demo = { version = "0.5", features = ["cs2"] }
rfd = "0.15"
ureq = { version = "2.10", features = ["native-tls"] }
zstd = "0.13"
prost = "0.14.4"
source2-demo-protobufs = "0.5.5"
urlencoding = "2.1.3"
base64 = "0.22.1"


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3

